fix layout broken at 1600px close #97

--- a/site/theme/static/responsive.less
+++ b/site/theme/static/responsive.less
@@ -11,7 +11,7 @@
   cursor: pointer;
 }
 
-@media only screen and (min-width: 1440px) and (max-width: 1600px) {
+@media only screen and (min-width: 1440px) and (max-width: 1599px) {
   .main-wrapper > .ant-row > .ant-col-xl-5 {
     width: 274px;
   }
